--- a/omega/Index.html
+++ b/omega/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ômega</title>
+    <title>Ômega - Vivian</title>
 
     <meta name="description" content="A agência Ômega é especializada em produtos e serviços digitais">
 
