Atualização do saudação

--- a/omega/Index.html
+++ b/omega/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ômega - Vivian</title>
+    <title>Ômega</title>
 
     <meta name="description" content="A agência Ômega é especializada em produtos e serviços digitais">
 
@@ -301,7 +301,7 @@ receber as informações do formulário -->
       function success() {
         form.reset();
         button.style = "display: none ";
-        status.innerHTML = "Obrigado!";
+        status.innerHTML = "Obrigado! Entraremos em contato assim que possível";
       }
         document.querySelector("#caracteres").textContent = 300;
         document.querySelector("#maximo").style.color ="black";
